--- a/ANTIBigBoss MGS Mod Manager.csproj
+++ b/ANTIBigBoss MGS Mod Manager.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GuiManager.cs" />
+    <Compile Include="LoggingManager.cs" />
     <Compile Include="MG1ModdingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,11 +84,11 @@
     <Compile Include="MainMenuForm.Designer.cs">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ModResources.cs">
+    <Compile Include="ModResourcesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ModResources.Designer.cs">
-      <DependentUpon>ModResources.cs</DependentUpon>
+    <Compile Include="ModResourcesForm.Designer.cs">
+      <DependentUpon>ModResourcesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -107,6 +109,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModResourcesForm.resx">
+      <DependentUpon>ModResourcesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
