Texture and Model Viewer
About 70% done the texture viewing and  3D modeling. Just need to fix my hardcoded offsets for the tools being used for DDS -> CTXR conversion. Will implement something in DownloadManager for that.

--- a/ANTIBigBoss MGS Mod Manager.csproj
+++ b/ANTIBigBoss MGS Mod Manager.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>AudioSwapperForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ConfigManager.cs" />
+    <Compile Include="CtxrConverter.cs" />
     <Compile Include="CyclesBaker.cs" />
     <Compile Include="DownloadForm.cs">
       <SubType>Form</SubType>
